--- a/kaction-library/build.gradle
+++ b/kaction-library/build.gradle
@@ -52,11 +52,16 @@ dependencies {
     //RecyclerView依赖
     api 'com.android.support:recyclerview-v7:28.0.0'
     api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
+    api('com.choices.divider:RecyclerView_Divider:1.0.0') {
+        exclude group: 'com.android.support'
+    }
     //轮播依赖库
-    api 'com.bigkoo:convenientbanner:2.1.5'
+    api 'com.bigkoo:ConvenientBanner:2.1.4'
     api 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:2.0.24'
     //网络图片加载库
     api 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
     api 'com.github.bumptech.glide:okhttp3-integration:4.9.0'
+    //Json解析器
+    api 'com.alibaba:fastjson:1.1.71.android'
 }
