--- a/kaction-library/build.gradle
+++ b/kaction-library/build.gradle
@@ -56,8 +56,7 @@ dependencies {
         exclude group: 'com.android.support'
     }
     //轮播依赖库
-    api 'com.bigkoo:ConvenientBanner:2.1.4'
-    api 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:2.0.24'
+    api 'com.youth.banner:banner:1.4.10'  //最新版本
     //网络图片加载库
     api 'com.github.bumptech.glide:glide:4.9.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
